# dagctl

./: .gitignore  Cargo.toml  EVENTS_LOGS_IMPLEMENTATION.md  IMPLEMENTATION_STATUS.md  LICENSE  README.md  TESTING.md  build.rs  coverage.sh
.github/workflows/: ci.yml  release.yml
.kiro/docs/: conventions.md  product.md  structure.md  tech-stack.md  workflow.md
.playwright-cli/: page-2026-04-24T12-50-14-853Z.yml
proptest-regressions/: config.txt
schemas/: dagster.graphql
src/: auth.rs  config.rs  lib.rs  main.rs  output.rs  schema.rs
src/commands/: assets.rs  code_locations.rs  debug.rs  jobs.rs  mod.rs  runs.rs  schema.rs  skill.rs  update.rs
tests/: integration_tests.rs
