[package]
name = "dagctl"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
colored = "2"
cynic = { version = "3", features = ["http-reqwest"] }
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
toml = "0.8"

[dev-dependencies]
mockito = "1.5"
tempfile = "3.13"
proptest = "1.5"

[build-dependencies]
cynic-codegen = "3"
